# cppNet

./: CMakeLists.txt  LICENSE  README.md  main.cpp
Network/: CMakeLists.txt  layer.cpp  layer.h  network.cpp  network.h
Solver/: CMakeLists.txt  randomsolver.cpp  randomsolver.h  scorer.cpp  scorer.h  solver.cpp  solver.h
